[gd_scene load_steps=54 format=2]

[ext_resource path="res://Img/LetrasLogo/s.png" type="Texture" id=1]
[ext_resource path="res://Img/LetrasLogo/acento.png" type="Texture" id=2]
[ext_resource path="res://Img/LetrasLogo/i.png" type="Texture" id=3]
[ext_resource path="res://Fontes/Retro Gaming.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Img/LetrasLogo/D.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=6]
[ext_resource path="res://Img/LetrasLogo/r.png" type="Texture" id=7]
[ext_resource path="res://Img/LetrasLogo/o.png" type="Texture" id=8]
[ext_resource path="res://Img/LetrasLogo/an.png" type="Texture" id=9]
[ext_resource path="res://Img/LetrasLogo/et.png" type="Texture" id=10]
[ext_resource path="res://Img/LetrasLogo/pl.png" type="Texture" id=11]
[ext_resource path="res://Img/semFundo.png" type="Texture" id=12]
[ext_resource path="res://Fontes/zekton rg.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Img/planetas/praneta3.png" type="Texture" id=19]
[ext_resource path="res://Img/fundoPplaneta2.jpg" type="Texture" id=20]
[ext_resource path="res://Img/background_2.png" type="Texture" id=21]
[ext_resource path="res://Scripts/ParallaxLayerEstrela.gd" type="Script" id=22]
[ext_resource path="res://Scripts/ParallaxLayerEstrela2.gd" type="Script" id=23]
[ext_resource path="res://Scripts/ParallaxLayerEstrela3.gd" type="Script" id=24]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado12.png" type="Texture" id=25]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado3.png" type="Texture" id=26]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado2.png" type="Texture" id=27]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado5.png" type="Texture" id=28]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado10.png" type="Texture" id=29]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado1.png" type="Texture" id=30]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado11.png" type="Texture" id=31]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado4.png" type="Texture" id=32]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado9.png" type="Texture" id=33]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado8.png" type="Texture" id=34]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado6.png" type="Texture" id=35]
[ext_resource path="res://Img/paralaxEstrelaMexendo/estrelado7.png" type="Texture" id=36]
[ext_resource path="res://Img/cometaParallax/cadente6.png" type="Texture" id=37]
[ext_resource path="res://Img/cometaParallax/cadente5.png" type="Texture" id=38]
[ext_resource path="res://Img/cometaParallax/cadente1.png" type="Texture" id=39]
[ext_resource path="res://Img/cometaParallax/cadente2.png" type="Texture" id=40]
[ext_resource path="res://Img/cometaParallax/cadente3.png" type="Texture" id=41]
[ext_resource path="res://Img/cometaParallax/cadente4.png" type="Texture" id=42]
[ext_resource path="res://Img/cometaParallax/cadente7.png" type="Texture" id=43]
[ext_resource path="res://Img/cometaParallax/cadente8.png" type="Texture" id=44]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=13]
size = 13
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 30 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 32 ), ExtResource( 28 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 25 ) ],
"loop": true,
"name": "estrelas",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 38 ), ExtResource( 37 ), ExtResource( 43 ), ExtResource( 44 ) ],
"loop": true,
"name": "cometa",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -16, 48 ), Vector2( 36, 69 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("i:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -8, 0 ), Vector2( 51.8206, 69.6077 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("r:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 0 ), Vector2( 67, 69 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("o:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 168, 96 ), Vector2( 89, 69 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("acento:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 8 ), Vector2( 105, 69 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("s:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 176, 24 ), Vector2( 120, 69 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Ba:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tt:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("le:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("le:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 77, 67 ), Vector2( 107, 67 ), Vector2( 77, 67 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tt:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.9, 1.2, 1.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 8.0, -8.0, 8.0, -8.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
length = 7.4
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95, 2.1, 2.25, 2.4, 2.55, 2.7, 2.85, 3, 3.15, 3.3, 3.45, 3.6, 3.75, 3.9, 4.05, 4.2, 4.35, 4.5, 4.65, 4.8, 4.95, 5.1, 5.25, 5.4, 5.55, 5.7, 5.85, 6, 6.15, 6.3, 6.45, 6.6, 6.75, 6.9, 7.05, 7.2, 7.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49 ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 9
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 16 )

[sub_resource type="Animation" id=11]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 6 )

[node name="botao" type="Node" parent="."]

[node name="btndd" type="TouchScreenButton" parent="botao"]
visible = false
position = Vector2( 40, 184 )
scale = Vector2( 0.125036, 0.125036 )
normal = ExtResource( 12 )
pressed = ExtResource( 12 )

[node name="Iniciar" type="Label" parent="botao"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 54.0
margin_top = 216.0
margin_right = 115.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 1 )
text = "Iniciar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayerBotao" type="AnimationPlayer" parent="botao/Iniciar"]
anims/aparecerBotao = SubResource( 2 )

[node name="Voltando" type="Label" parent="botao"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 8.0
margin_top = 208.0
margin_right = 160.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 13 )
text = "Bem vindo 
novamente"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayerBotao2" type="AnimationPlayer" parent="botao/Voltando"]
anims/aparecerBotao = SubResource( 14 )

[node name="Fundo" type="Node" parent="."]

[node name="fundo" type="Node" parent="Fundo"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Fundo/fundo"]

[node name="Sprite" type="Sprite" parent="Fundo/fundo/ParallaxBackground"]
scale = Vector2( 1.02188, 1 )
texture = ExtResource( 20 )
centered = false

[node name="ParallaxLayer6" type="ParallaxLayer" parent="Fundo/fundo/ParallaxBackground"]
position = Vector2( -56.1231, -2.52781 )
motion_mirroring = Vector2( 150, 130 )
script = ExtResource( 23 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Fundo/fundo/ParallaxBackground/ParallaxLayer6"]
position = Vector2( 108.598, 93.702 )
scale = Vector2( 0.366671, 0.414863 )
frames = SubResource( 3 )
animation = "estrelas"
frame = 2
playing = true

[node name="ParallaxLayer7" type="ParallaxLayer" parent="Fundo/fundo/ParallaxBackground"]
position = Vector2( 32, 41.6359 )
motion_mirroring = Vector2( 170, 0 )
script = ExtResource( 23 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Fundo/fundo/ParallaxBackground/ParallaxLayer7"]
position = Vector2( 87.1225, 31.8677 )
rotation = 0.364774
scale = Vector2( 0.312126, 0.386383 )
frames = SubResource( 4 )
animation = "cometa"
frame = 6
playing = true

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Fundo/fundo/ParallaxBackground"]
position = Vector2( -39.2862, 107.473 )
motion_mirroring = Vector2( 300, 70 )
script = ExtResource( 23 )

[node name="Sprite" type="Sprite" parent="Fundo/fundo/ParallaxBackground/ParallaxLayer2"]
scale = Vector2( 1.15451, 1.38178 )
texture = ExtResource( 21 )
centered = false

[node name="ParallaxLayer8" type="ParallaxLayer" parent="Fundo/fundo/ParallaxBackground"]
position = Vector2( -42.6535, 151.249 )
motion_mirroring = Vector2( 300, 70 )
script = ExtResource( 23 )

[node name="Sprite" type="Sprite" parent="Fundo/fundo/ParallaxBackground/ParallaxLayer8"]
scale = Vector2( 1.15451, 1.38178 )
texture = ExtResource( 21 )
centered = false

[node name="ParallaxLayer9" type="ParallaxLayer" parent="Fundo/fundo/ParallaxBackground"]
position = Vector2( -30.4056, 145.237 )
motion_mirroring = Vector2( 300, 70 )
script = ExtResource( 23 )

[node name="Sprite" type="Sprite" parent="Fundo/fundo/ParallaxBackground/ParallaxLayer9"]
position = Vector2( -6.74239, -74.1662 )
scale = Vector2( 1.15451, 1.38178 )
texture = ExtResource( 21 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Fundo/fundo/ParallaxBackground"]
modulate = Color( 0.592157, 0, 1, 1 )
position = Vector2( -62.4435, 43.9012 )
motion_mirroring = Vector2( 300, 70 )
script = ExtResource( 24 )

[node name="Sprite" type="Sprite" parent="Fundo/fundo/ParallaxBackground/ParallaxLayer3"]
position = Vector2( 6.7818, 40.7818 )
scale = Vector2( 0.91873, 0.777368 )
texture = ExtResource( 21 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Fundo/fundo/ParallaxBackground"]
position = Vector2( -6, 73.1359 )
motion_mirroring = Vector2( 300, 50 )
script = ExtResource( 22 )

[node name="Sprite" type="Sprite" parent="Fundo/fundo/ParallaxBackground/ParallaxLayer4"]
position = Vector2( 7.14328, 12.587 )
scale = Vector2( 1.01195, 1.12699 )
texture = ExtResource( 21 )
centered = false

[node name="ParallaxLayer5" type="ParallaxLayer" parent="Fundo/fundo/ParallaxBackground"]
position = Vector2( -6, 73.1359 )
motion_mirroring = Vector2( 300, 130 )
script = ExtResource( 22 )

[node name="Sprite" type="Sprite" parent="Fundo/fundo/ParallaxBackground/ParallaxLayer5"]
modulate = Color( 0.843137, 0.572549, 0.572549, 1 )
position = Vector2( 6.25238, 73.1681 )
scale = Vector2( 1.01474, 1.18695 )
texture = ExtResource( 21 )
centered = false

[node name="animaçao" type="Node" parent="Fundo"]

[node name="D" type="Sprite" parent="Fundo/animaçao"]
position = Vector2( -16, 48 )
scale = Vector2( 0.102285, 0.105378 )
texture = ExtResource( 5 )

[node name="i" type="Sprite" parent="Fundo/animaçao"]
position = Vector2( -8, 0 )
scale = Vector2( 0.102285, 0.105378 )
texture = ExtResource( 3 )

[node name="r" type="Sprite" parent="Fundo/animaçao"]
position = Vector2( 72, 0 )
scale = Vector2( 0.102285, 0.105378 )
texture = ExtResource( 7 )

[node name="o" type="Sprite" parent="Fundo/animaçao"]
position = Vector2( 168, 96 )
scale = Vector2( 0.102285, 0.105378 )
texture = ExtResource( 8 )

[node name="acento" type="Sprite" parent="Fundo/animaçao"]
position = Vector2( 120, 8 )
scale = Vector2( 0.102285, 0.105378 )
texture = ExtResource( 2 )

[node name="s" type="Sprite" parent="Fundo/animaçao"]
position = Vector2( 176, 24 )
scale = Vector2( 0.102285, 0.105378 )
texture = ExtResource( 1 )

[node name="logoAnima" type="AnimationPlayer" parent="Fundo/animaçao"]
anims/logo = SubResource( 5 )

[node name="animaçao2" type="Node" parent="Fundo"]

[node name="Ba" type="Sprite" parent="Fundo/animaçao2"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 77, 67 )
scale = Vector2( 0.105605, 0.108763 )
texture = ExtResource( 11 )

[node name="tt" type="Sprite" parent="Fundo/animaçao2"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 77, 67 )
scale = Vector2( 0.105605, 0.108763 )
texture = ExtResource( 9 )

[node name="le" type="Sprite" parent="Fundo/animaçao2"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 77, 67 )
scale = Vector2( 0.105605, 0.108763 )
texture = ExtResource( 10 )

[node name="animaLogo2" type="AnimationPlayer" parent="Fundo/animaçao2"]
anims/Logo2 = SubResource( 6 )
anims/batebate = SubResource( 7 )

[node name="planetas" type="Node" parent="Fundo"]

[node name="planeta1" type="Sprite" parent="Fundo/planetas"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 80, 144 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 19 )
hframes = 50

[node name="AnimationPlayerPlaneta" type="AnimationPlayer" parent="Fundo/planetas/planeta1"]
anims/RodaRodaJequiti = SubResource( 8 )
anims/surgindopraneta = SubResource( 9 )

[node name="Label" type="Node" parent="."]

[node name="Label" type="Label" parent="Label"]
margin_left = 20.0
margin_top = 270.0
margin_right = 148.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Todos os direitos reservados"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transição" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="transição"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="AnimacaoTransicao" type="AnimationPlayer" parent="transição/ColorRect"]
autoplay = "Entrando"
anims/Entrando = SubResource( 11 )
anims/Saindo = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="pressed" from="botao/btndd" to="." method="_on_btndd_pressed"]
[connection signal="animation_finished" from="botao/Iniciar/AnimationPlayerBotao" to="." method="_on_AnimationPlayerBotao_animation_finished"]
[connection signal="animation_finished" from="botao/Voltando/AnimationPlayerBotao2" to="." method="_on_AnimationPlayerBotao2_animation_finished"]
[connection signal="animation_finished" from="Fundo/animaçao/logoAnima" to="." method="_on_logoAnima_animation_finished"]
[connection signal="animation_finished" from="Fundo/animaçao2/animaLogo2" to="." method="_on_animaLogo2_animation_finished"]
[connection signal="animation_finished" from="Fundo/planetas/planeta1/AnimationPlayerPlaneta" to="." method="_on_AnimationPlayerPlaneta_animation_finished"]
[connection signal="animation_finished" from="transição/ColorRect/AnimacaoTransicao" to="." method="_on_AnimacaoTransicao_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
